# fastapi_template

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
