[project]
name = "fastapi-template"
version = "1.0.0"
description = "This project is a template for building FastAPI applications with best practices for development, testing, and deployment using Docker and Poetry."
authors = [{ name = "Kevin Rodríguez", email = "kyrodriguez97@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "fastapi[standard]==0.121.3"
]

[tool.uv]
package = false

[dependency-groups]
test = [
    "pytest==9.0.1",
    "pytest-cov (==7.0.0)",
]
dev = [
    "pre-commit (==4.4.0)",
    "isort (==7.0.0)",
    "black (==25.11.0)",
    "flake8 (==7.3.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
