[project]
name = "fastapi-template"
version = "1.0.0"
description = "This project is a template for building FastAPI applications with best practices for development, testing, and deployment using Docker and uv."
authors = [{ name = "Kevin Rodríguez", email = "kyrodriguez97@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "fastapi[standard]==0.124.4"
]

[tool.uv]
package = false

[dependency-groups]
test = [
    "pytest==9.0.2",
    "pytest-cov (==7.0.0)",
]
dev = [
    "pre-commit (==4.5.1)",
    "ruff (==0.14.10)",
]

# Ruff configuration
[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = ["E203", "E305"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
